starter code added

--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
     			labels: ['bellyache', 'Bad Company', 'Feelings', 'moonlight', 'Sounds Fake but Ok', 'Coloring Outside The Lines', 'You Owe Me', 'This Town - Gucci Mane Edit', 'No Excuses', 'Whiskey', 'New Religion', 'City Lights', 'Strangers', 'Tokyo', 'Go', 'Common Fear', 'Pink Lemonade', 'Blackberries',
  'Nothing to Regret', 'Not A Love Song', 'Real Friends', 'So Much More Than This', 'ILLUSION', 'Normal', 'Clearly', 'Sleep Talking', 'Bad Song'],
     			datasets: [{
-    				label: 'Dataset 1',
+    				label: 'Tempo',
     				backgroundColor: 	'rgb(255,160,122)',
     				borderColor: 	'rgb(255,160,122)',
     				borderWidth: 1,
     				data: [99.983, 113.026, 110.956, 123.011, 124.914, 110.972, 89.996, 147.965, 115.016, 127.897, 97.012, 105.96, 115.034, 121.066, 154.124, 153.901, 152.078, 91.981, 91.998, 92.005, 91.958, 180.039, 113.934, 119.908, 98, 101.99, 140.028]
-    			}, {
     			}]
 
     		};
